--- a/lab-05-wrangle-sp-data.Rmd
+++ b/lab-05-wrangle-sp-data.Rmd
@@ -2,15 +2,15 @@
 title: "Lab 05 - La Quinta is Spanish for next to Denny's, Pt. 2"
 subtitle: "Wrangling spatial data"
 output: 
+  tufte::tufte_html:
+    css: ../lab.css
+    tufte_variant: "envisioned"
+    highlight: pygments
   tufte::tufte_handout:
     latex_engine: xelatex
     highlight: pygments
     keep_tex: true
     citation_package: natbib
-  tufte::tufte_html:
-    css: ../lab.css
-    tufte_variant: "envisioned"
-    highlight: pygments
 link-citations: true
 ---
 
@@ -58,22 +58,28 @@ You can also find this information [here](https://rstudio-education.github.io/ds
 
 # Exercises
 
-1.  Filter the Denny's dataframe for Alaska (AK) and save the result as `dn_ak`. How many Denny's locations are there in Alaska?
+1.  Filter the Denny's dataframe for Alaska (AK) and save the result as `dn_ak`. How many Denny's locations are there in Alaska? `3`
 
-```{r}
+```{r, eval = TRUE}
 dn_ak <- dennys %>%
   filter(state == "AK")
 nrow(dn_ak)
 ```
 
-2.  Filter the La Quinta dataframe for Alaska (AK) and save the result as `lq_ak`. How many La Quinta locations are there in Alaska?
-
 ```{r}
+dn_ak
+```
+2.  Filter the La Quinta dataframe for Alaska (AK) and save the result as `lq_ak`. How many La Quinta locations are there in Alaska? `2`
+
+```{r lq-ak, eval = TRUE}
 lq_ak <- laquinta %>%
   filter(state == "AK")
 nrow(lq_ak)
 ```
 
+```{r}
+lq_ak
+```
 Next we'll calculate the distance between all Denny's and all La Quinta locations in Alaska.
 Let's take this step by step:
 
@@ -92,6 +98,8 @@ We'll need to calculate two distances for it: (1) distance between Denny's 1 and
 ![](img/dennys-laquinta-sketches/dennys-laquinta-sketches.003.png){width="300px" height="450px"}
 
 3.  How many pairings are there between all Denny's and all La Quinta locations in Alaska, i.e. how many distances do we need to calculate between the locations of these establishments in Alaska?
+
+`There are 6 distances we need to calculate.`
 
 In order to calculate these distances we need to first restructure our data to pair the Denny's and La Quinta locations.
 To do so, we will join the two data frames.
@@ -129,12 +137,13 @@ So we will use a `full_join`.
 
 Let's join the data on Denny's and La Quinta locations in Alaska, and take a look at what it looks like:
 
-```{r}
+```{r full-join, eval = TRUE}
 dn_lq_ak <- full_join(dn_ak, lq_ak, by = "state")
 dn_lq_ak
 ```
 
-4.  How many observations are in the joined `dn_lq_ak` data frame? What are the names of the variables in this data frame.
+4.  How many observations are in the joined `dn_lq_ak` data frame? What are the names of the variables in this data frame. `There are 6 observavations. The variables are Address.x, city.x, state, zip.x, longitude.x, latitude.x, address.y, city.y, zip.y, latitude.y, and longitude.y`
+
 
 `.x` in the variable names means the variable comes from the `x` data frame (the first argument in the `full_join` call, i.e. `dn_ak`), and `.y` means the variable comes from the `y` data frame.
 These varibles are renamed to include `.x` and `.y` because the two data frames have the same variables and it's not possible to have two variables in a data frame with the exact same name.
@@ -143,14 +152,14 @@ Now that we have the data in the format we wanted, all that is left is to calcul
 
 Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
-5.  What function from the tidyverse do we use the add a new variable to a data frame while keeping the existing variables?
+5.  What function from the tidyverse do we use the add a new variable to a data frame while keeping the existing variables? `Mutate.`
 
 One way of calculating the distance between any two points on the earth is to use the Haversine distance formula.
 This formula takes into account the fact that the earth is not flat, but instead spherical.
 
 This function is not available in R, but we have it saved in a file called `haversine.R` that we can load and then use:
 
-```{r}
+```{r hav, eval = TRUE}
 haversine <- function(long1, lat1, long2, lat2, round = 3) {
   # convert to radians
   long1 = long1 * pi / 180
@@ -175,6 +184,11 @@ This function takes five arguments:
 
 6.  Calculate the distances between all pairs of Denny's and La Quinta locations and save this variable as `distance`.
     Make sure to save this variable in THE `dn_lq_ak` data frame so that you can use it later.
+    
+```{r distance, eval = FALSE}
+dn_lq_ak %>%
+  mutate(distance = )
+```
 
 7.  Calculate the minimum distance between a Denny's and La Quinta for each Denny's location.
     To do so we group by Denny's locations and calculate a new variable that stores the information for the minimum distance.
