--- a/lab-05-wrangle-sp-data.Rmd
+++ b/lab-05-wrangle-sp-data.Rmd
@@ -185,21 +185,22 @@ This function takes five arguments:
 6.  Calculate the distances between all pairs of Denny's and La Quinta locations and save this variable as `distance`.
     Make sure to save this variable in THE `dn_lq_ak` data frame so that you can use it later.
     
-```{r distance, eval = FALSE}
+```{r distance, eval = TRUE}
 dn_lq_ak %>%
-  mutate(distance = )
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y))
 ```
 
 7.  Calculate the minimum distance between a Denny's and La Quinta for each Denny's location.
     To do so we group by Denny's locations and calculate a new variable that stores the information for the minimum distance.
 
-```{r eval = FALSE}
-dn_lq_ak_mindist <- dn_lq_ak %>%
+```{r min-dist, eval = TRUE}
+dn_lq_ak %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
   group_by(address.x) %>%
   summarise(closest = min(distance))
 ```
 
-8.  Describe the distribution of the distances Denny's and the nearest La Quinta locations in Alaska. Also include an appripriate visualization and relevant summary statistics.
+8.  Describe the distribution of the distances Denny's and the nearest La Quinta locations in Alaska. Also include an appripriate visualization and relevant summary statistics. `Some Denny's are relatively close to a La Quinta, but the others are further. Each Denny's has a La Quinta within 6 km.`
 
 Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards.*
 
