--- a/lab-05-wrangle-sp-data.Rmd
+++ b/lab-05-wrangle-sp-data.Rmd
@@ -197,7 +197,8 @@ dn_lq_ak %>%
 dn_lq_ak %>%
   mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
   group_by(address.x) %>%
-  summarise(closest = min(distance))
+  summarise(closest = min(distance)) %>%
+  arrange(closest)
 ```
 
 8.  Describe the distribution of the distances Denny's and the nearest La Quinta locations in Alaska. Also include an appripriate visualization and relevant summary statistics. `Some Denny's are relatively close to a La Quinta, but the others are further. Each Denny's has a La Quinta within 6 km.`
@@ -206,12 +207,108 @@ Knit, *commit, and push your changes to GitHub with an appropriate commit messag
 
 9.  Repeat the same analysis for North Carolina: (i) filter Denny's and La Quinta Data Frames for NC, (ii) join these data frames to get a completelist of all possible pairings, (iii) calculate the distances between all possible pairings of Denny's and La Quinta in NC, (iv) find the minimum distance between each Denny's and La Quinta location, (v) visualize and describe the distribution of these shortest distances using appropriate summary statistics.
 
+```{r dn-nc, eval = TRUE}
+dn_nc <- dennys %>%
+  filter(state == "NC")
+nrow(dn_nc)
+```
+
+```{r lq-nc, eval = TRUE}
+lq_nc <- laquinta %>%
+  filter(state == "NC")
+nrow(lq_nc)
+```
+```{r full-join-nc, eval = TRUE}
+dn_lq_nc <- full_join(dn_nc, lq_nc, by = "state")
+dn_lq_nc
+```
+
+```{r distance-nc, eval = TRUE}
+dn_lq_nc %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y))
+```
+```{r min-dist-nc, eval = TRUE}
+dn_lq_nc %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
+  group_by(address.x) %>%
+  summarise(closest = min(distance)) %>%
+  arrange(closest)
+```
 10. Repeat the same analysis for Texas.
 
-11. Repeat the same analysis for a state of your choosing, different than the ones we covered so far.
+```{r dn-tx, eval = TRUE}
+dn_tx <- dennys %>%
+  filter(state == "TX")
+nrow(dn_tx)
+```
 
+```{r lq-tx, eval = TRUE}
+lq_tx <- laquinta %>%
+  filter(state == "TX")
+nrow(lq_tx)
+```
+```{r full-join-tx, eval = TRUE}
+dn_lq_tx <- full_join(dn_tx, lq_tx, by = "state")
+dn_lq_tx
+```
+
+```{r distance-tx, eval = TRUE}
+dn_lq_tx %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y))
+```
+```{r min-dist-tx, eval = TRUE}
+dn_lq_tx %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
+  group_by(address.x) %>%
+  summarise(closest = min(distance)) %>%
+  arrange(closest)
+```
+```{r max-dist-tx, eval = TRUE}
+dn_lq_tx %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
+  group_by(address.x) %>%
+  summarise(closest = min(distance)) %>%
+  arrange(desc(closest))
+```
+11. Repeat the same analysisfor a state of your choosing, different than the ones we covered so far.
+
+```{r dn-ca, eval = TRUE}
+dn_ca <- dennys %>%
+  filter(state == "CA")
+nrow(dn_ca)
+```
+
+```{r lq-ca, eval = TRUE}
+lq_ca <- laquinta %>%
+  filter(state == "CA")
+nrow(lq_ca)
+```
+```{r full-join-ca, eval = TRUE}
+dn_lq_ca <- full_join(dn_ca, lq_ca, by = "state")
+dn_lq_ca
+```
+
+```{r distance-ca, eval = TRUE}
+dn_lq_ca %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y))
+```
+```{r min-dist-ca, eval = TRUE}
+dn_lq_ca %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
+  group_by(address.x) %>%
+  summarise(closest = min(distance)) %>%
+  arrange(closest)
+```
+```{r max-dist-ca, eval = TRUE}
+dn_lq_ca %>%
+  mutate(distance = haversine(longitude.x,latitude.x,longitude.y,latitude.y)) %>%
+  group_by(address.x) %>%
+  summarise(closest = min(distance)) %>%
+  arrange(desc(closest))
+```
 12. Among the states you examined, where is Mitch Hedberg's joke most likely to hold true?
     Explain your reasoning.
+`It is difficult to tell because there are so many different locations. Alaska consistently has Denny's close to LaQuintas, but there are also fewer locations. Larger states like Texas and California have shorter distances, but also further maximum distances. I would say that Mitch Hedberg's joke is more accurate in Texas, as it has a smaller maximum distance than any in California.`
 
 Knit, *commit, and push your changes to GitHub with an appropriate commit message. Make sure to commit and push all changed files so that your Git pane is cleared up afterwards and review the md document on GitHub to make sure you're happy with the final state of your work.*
 
